--- a/src/products/code/renderer/styles/chat-operator.css
+++ b/src/products/code/renderer/styles/chat-operator.css
@@ -16,6 +16,6 @@
 }
 
 .chatPaneSidePanelBelowBar {
-  top: 52px;
-  height: calc(100vh - 52px);
+  top: 60px;
+  height: calc(100vh - 60px);
 }
